# mega

./: .gitignore  README.md  app.py  config.py  database.py  loteria-gerador.spec  main.py  mega_sena_asloterias_ate_concurso_2899_sorteio.xlsx  pyproject.toml  teste.py  ui.py  updates.py
.github/workflows/: build.yml
megasena_gerador/: config.py  ui.py
megasena_gerador/assets/: loto_facil_asloterias_ate_concurso_3469_sorteio.xlsx
src/: config.py  database.py  main.py  ui.py  updates.py  utils.py
src/assets/: .~lock.dupla_sena.xlsx#  .~lock.lotomania.xlsx#  dupla_sena_asloterias_ate_concurso_2934_sorteio.xlsx  loto_facil_asloterias_ate_concurso_3510_sorteio.xlsx  loto_facil_asloterias_ate_concurso_3632_sorteio.xlsx  lotomania.xlsx  mega_sena_asloterias_ate_concurso_2926_sorteio.xlsx  mega_sena_asloterias_ate_concurso_2982_sorteio.xlsx  quina_asloterias_ate_concurso_6972_sorteio.xlsx
