[tool.poetry]
name = "megasena-gerador"
version = "0.1.0"
description = "Gerador de números para Mega-Sena com base em dados históricos"
authors = ["Seu Nome <seu.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pandas = "^2.2.3"
numpy = "^2.3.2"
matplotlib = "^3.9.2"
openpyxl = "^3.1.5"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
