[tool.poetry]
name = "megasena-gerador"
version = "0.1.16"
description = "Gerador de números para Mega-Sena e Loto Fácil"
authors = ["Marcelo Santo"]
package-mode = false                                           # <--- ADICIONE ESTA LINHA

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pandas = "^2.3.1"
numpy = "^2.3.2"
matplotlib = "^3.10.5"
openpyxl = "^3.1.5"
requests = "^2.32.4"
flet = "^0.28.3"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
